back to obj loader

--- a/website/index.html
+++ b/website/index.html
@@ -36,15 +36,18 @@
 	<body>
 		<div class="button">Start VR Mode</div>
 		<div id="container"></div>
+
+
+		<!-- libraries for VR control -->
 		<script src="js/three.min.js"></script>
 		<script src="js/VREffect.js"></script>
 		<script src="js/VRControls.js"></script>
 		<script src="js/stats.min.js"></script>
 		<script src="js/main.js"></script>
-		<script src="js/ColladaLoader.js"></script>
-		<script src="js/OBJLoader.js"></script>
 		<script src="js/webvr-polyfill.js"></script>
 
+		<script src="js/ColladaLoader.js"></script>
+		<script src="js/OBJLoader.js"></script>
 
 	</body>
 </html>
