added skybox, better camera rotation and assets folder

--- a/home.html
+++ b/home.html
@@ -38,7 +38,9 @@
 
 		<!-- libraries for VR control -->
 		<script src="js/three.min.js"></script>
-		<script src="js/ColladaLoader.js"></script>
+		<script src="js/DDSLoader.js"></script>
+		<script src="js/MTLLoader.js"></script>
+		<script src="js/OBJMTLLoader.js"></script>
 		<!-- THREE.js effect which renders a scene with two cameras in it.
 		Puts the two images side-by-side. -->
 		<script src="js/VREffect.js"></script>
