--- a/home.html
+++ b/home.html
@@ -4,41 +4,13 @@
 		<title>GacVR</title>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0">
-		<style>
-			body {
-				font-family: Monospace;
-				background-color: #f0f0f0;
-				margin: 0px;
-				overflow: hidden;
-			}
-
-			.button {
-				position: fixed;
-				bottom: 20px;
-				right: 20px;
-				padding: 8px;
-				color: #FFF;
-				background-color: #555;
-			}
-
-			.button:hover {
-				cursor: pointer;
-				background-color: rgb(18, 36, 70);
-			}
-
-			.button.error {
-				pointer-events: none;
-				background-color: red;
-			}
-
-		</style>
+		<link rel="stylesheet" type="text/css" href="home.css">
 	</head>
 	<body>
 		<div class="button">Start VR Mode</div>
 
 		<!-- libraries for VR control -->
 		<script src="js/three.min.js"></script>
-		<script src="js/DDSLoader.js"></script>
 		<script src="js/MTLLoader.js"></script>
 		<script src="js/OBJMTLLoader.js"></script>
 		<!-- THREE.js effect which renders a scene with two cameras in it.
