added first camera controls

--- a/home.html
+++ b/home.html
@@ -5,6 +5,8 @@
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0">
 		<link rel="stylesheet" type="text/css" href="home.css">
+		<script src="//code.jquery.com/jquery-1.11.3.min.js"></script>
+		<script src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
 	</head>
 	<body>
 		<div class="button">Start VR Mode</div>
@@ -19,6 +21,7 @@
 		<!-- THREE.js controls which take advantage of the WebVR API.
 		Usually attached to the THREE.Camera to look around the scene. -->
 		<script src="js/VRControls.js"></script>
+		<script src="https://dl.dropboxusercontent.com/u/3587259/Code/Threejs/OrbitControls.js"></script>
 		<!-- For fps info -->
 		<script src="js/stats.min.js"></script>
 		<!-- For Cardboard rendering.
