tried a few times

--- a/home.html
+++ b/home.html
@@ -13,6 +13,7 @@
 
 		<!-- libraries for VR control -->
 		<script src="js/three.min.js"></script>
+		<script src="js/three-vr.js"></script>
 		<script src="js/MTLLoader.js"></script>
 		<script src="js/OBJMTLLoader.js"></script>
 		<!-- THREE.js effect which renders a scene with two cameras in it.
