--- a/home.html
+++ b/home.html
@@ -28,6 +28,7 @@
 		On mobile, supports rotation via DeviceOrientation.
 		On desktop, supports looking with the mouse or with arrow keys. -->
 		<script src="js/webvr-polyfill.js"></script>
+		<script src="js/webvr-manager.js"></script>
 		<script src="js/main.js"></script>
 		
 
